Results: Fix long names overflowing recent queries

--- a/less/components/results.less
+++ b/less/components/results.less
@@ -49,6 +49,11 @@
             &:hover {
                 background-color: #e9e9e9;
             }
+            .title {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
             .time {
                 font-size: 0.7em;
                 text-align: right;
